<resources>
    <string name="app_name">聚搭</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_communication">社区</string>
    <string name="title_recommend">店铺推荐</string>
    <string name="title_trolley">购物车</string>
    <string name="title_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">正在加载...</string>
</resources>
