<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/title_recommend"/>

    <item
        android:id="@+id/navigation_communication"
        android:icon="@drawable/ic_near_me_black_24dp"
        android:title="@string/title_communication"/>

    <item
        android:id="@+id/navigation_trolley"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_trolley"/>

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_mine"/>


</menu>
